Closed
Bug 335162
Opened 20 years ago
Closed 19 years ago
right click contextual popup in bookmarks menu ignores key aht ccelerators
Categories
(Firefox :: Bookmarks & History, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: b0b0b0b, Assigned: neil)
References
Details
(Keywords: fixed1.8.1.1, Whiteboard: [Fx 2.0.0.1])
Attachments
(1 file)
|
764 bytes,
patch
|
enndeakin
:
review+
bzbarsky
:
superreview+
beltzner
:
approval1.8.1-
dveditz
:
approval1.8.1.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.2) Gecko/20060422 Firefox/1.5.0.2
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.2) Gecko/20060422 Firefox/1.5.0.2
The right-click popup in the bookmarks menu ignores key accelerators.
Reproducible: Always
Steps to Reproduce:
1. open ffox 1.5.0.2, open bookmarks menu
2. right click on a bookmark
3. hit any key that corresponds to an accelerator, e.g., O for Open
Actual Results:
The first bookmark starting with the letter you hit is activated and the contextual popup doesn't go away
Expected Results:
The action with the underlined letter that you typed would be invoked
It does work to use the up/down cursor keys and hit enter on the option you want.
Comment 1•20 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.3) Gecko/20060426 Firefox/1.5.0.3
Actual Results:
After right clicking on a bookmark and typing a hotkey letter:
A. If there is only one bookmark folder and/or bookmark starting with that letter, that folder or bookmark is activated. In this case:
1. The popup menu goes away only if you click on it (which then activates the selected menu item). Otherwise, it doesn't go away even if you switch to another browser window or another application.
2. If a bookmark folder is activated:
a. If you click on "Bookmarks" on the browser menu bar or on one of the first three menu items under the Bookmarks menu (i.e., "Bookmark This Page," etc.) and then click on any item on the persistent popup menu, the menu goes away and the selected menu item is activated.
b. Otherwise, if you click on any other part of the browser window and then click on any item on the persistent popup menu, the menu goes away but the selected menu item is not activated.
3. If a bookmark was activated, if you click on any item on the persistent popup menu, the menu goes away but the selected menu item is not activated.
B. If there is more than one bookmark folder and/or bookmark starting with the hotkey letter, nothing happens when that hotkey letter is typed.
Additionally, if A.2.b. occurs, the menu for the activated bookmark folder also does not go away.
An additional way to trigger this bug is to open Bookmarks menu, followed by a right click on a bookmark, and then press the Tab or the Alt key(both related to changing focus), while the contextual menu still open. The result is that the contextual menu stays open, even if you bring up another right click menu inside or outside Firefox(they "coexist"). The Bookmarks right-click menu goes away only if you click on it: right-clicking on it behaves like would a left mouse click on its fields, while a left mouse click does nothing more.
Tested - reproducible: Always
Comment 3•19 years ago
|
||
The original bug about accelkeys not working may be fixed in newer builds. The issues with the popups remaining on screen will be fixed by bug 279703.
Depends on: 279703
| Assignee | ||
Comment 4•19 years ago
|
||
By analogy with nsMenuPopupFrame::KeyboardNavigation
Assignee: nobody → neil
Status: UNCONFIRMED → ASSIGNED
Attachment #240653 -
Flags: superreview?(bzbarsky)
Attachment #240653 -
Flags: review?(enndeakin)
Updated•19 years ago
|
Attachment #240653 -
Flags: review?(enndeakin) → review+
Updated•19 years ago
|
Attachment #240653 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Comment 5•19 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 6•19 years ago
|
||
Comment on attachment 240653 [details] [diff] [review]
Fix shortcut navigation
Hmm... still no 1.8.1.1 flag yet?
Attachment #240653 -
Flags: approval1.8.1?
Updated•19 years ago
|
Flags: blocking1.8.1.1?
Whiteboard: [Fx 2.0.0.1]
Comment 7•19 years ago
|
||
Comment on attachment 240653 [details] [diff] [review]
Fix shortcut navigation
Already spinning RC2, so the branch is now closed and frozen.
Attachment #240653 -
Flags: approval1.8.1? → approval1.8.1-
| Assignee | ||
Updated•19 years ago
|
Attachment #240653 -
Flags: approval1.8.1.1?
Comment 8•19 years ago
|
||
Not a blocker, this is an old old bug, but we should probably take the patch.
Flags: blocking1.8.1.1? → blocking1.8.1.1-
Comment 9•19 years ago
|
||
Comment on attachment 240653 [details] [diff] [review]
Fix shortcut navigation
approved for 1.8 branch, a=dveditz
Attachment #240653 -
Flags: approval1.8.1.1? → approval1.8.1.1+
Updated•19 years ago
|
Whiteboard: [Fx 2.0.0.1] → [Fx 2.0.0.1] [checkin needed (1.8 branch)]
| Assignee | ||
Updated•19 years ago
|
Keywords: fixed1.8.1.1
Whiteboard: [Fx 2.0.0.1] [checkin needed (1.8 branch)] → [Fx 2.0.0.1]
Comment 10•19 years ago
|
||
I'm still seeing the problem on Fedora Core 5, with 2006113004
1. open the bookmarks menu
2. find a bookmark, context click on it
3. press ALT
4. do a right click somewhere else on the browser
result: see two context menus. the bookmark context menu also 'hangs around' and is hard to get rid of.
did this get checked in for 1.8.1.1 after it was approved?
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
| Assignee | ||
Comment 11•19 years ago
|
||
Sorry, but that's a separate bug, unrelated to this one.
Status: UNCONFIRMED → RESOLVED
Closed: 19 years ago → 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•