Shortcut navigation doesn't work in bookmark context menus b=335162 r=Enn sr=bz